swagger method
