# server.js
@@ -15,8 +15,8 @@ app.use('/api', router);
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 const server = async () => {
-  const db = await mongoose.connect(`mongodb+srv://${process.env.DB_USER}:${process.env.DB_PASSWORD}@transaction.osqhvw2.mongodb.net/?retryWrites=true&w=majority`,
-    { useUnifiedTopology: true, useNewUrlParser: true });
+ // const db = await mongoose.connect(`mongodb+srv://${process.env.DB_USER}:${process.env.DB_PASSWORD}@transaction.osqhvw2.mongodb.net/?retryWrites=true&w=majority`,
+    //{ useUnifiedTopology: true, useNewUrlParser: true });
   try {
     app.listen(process.env.PORT, async () => { console.log(`Server listening on port ${process.env.PORT}!`); });
   } catch (error) {
